Uploaded image for project: 'Apache NiFi MiNiFi C++'
  1. Apache NiFi MiNiFi C++
  2. MINIFICPP-2226

LoggerTests (Test sending multiple segments at once) is flaky

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • None
    • 0.99.0
    • None

    Description

      The "Test sending multiple segments at once" test in LoggerTests fails in about 5% - 10% of runs.

      -------------------------------------------------------------------------------
      Test sending multiple segments at once
      -------------------------------------------------------------------------------
      /home/fgerlits/src/minifi/libminifi/test/unit/LoggerTests.cpp:357
      ...............................................................................
      
      /home/fgerlits/src/minifi/libminifi/test/unit/LoggerTests.cpp:384: FAILED:
        REQUIRE( compressed_logs.size() == SEGMENT_COUNT )
      with expansion:
        4 == 5
      
      ===============================================================================
      test cases: 18 | 17 passed | 1 failed
      assertions: 41 | 40 passed | 1 failed
      

      Attachments

        1. LoggerTests.log
          17 kB
          Ferenc Gerlits

        Activity

          People

            fgerlits Ferenc Gerlits
            fgerlits Ferenc Gerlits
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 3h 10m
                3h 10m