MINIFICPP-2226 Fix LoggerTests flakiness

- don't use the static LoggerConfiguration instance, use our own instance instead
- do not call compress(), as that will conflict with the compress() calls in the
  background thread; wait for the background thread to finish instead
- add mutex to compress(), as it it called both from `run()` and `getContent()`
  in `LogCompressorSink`, and these are on different threads
- add `LogTestController::getInstance().clear()` calls to isolate tests from each other
- use different logger names in each test, because reusing the same name causes problems
- add a missing `return false` in LogCompressorSink.cpp