libminifi/test/unit/LoggerTests.cpp
@@ -35,6 +35,7 @@
 using namespace std::literals::chrono_literals;
 
 TEST_CASE("Test log Levels", "[ttl1]") {
+  LogTestController::getInstance().clear();
   LogTestController::getInstance().setTrace<logging::Logger>();
   std::shared_ptr<logging::Logger> logger = logging::LoggerFactory<logging::Logger>::getLogger();
   logger->log_info("hello {}", "world");
@@ -44,6 +45,7 @@ TEST_CASE("Test log Levels", "[ttl1]") {
 }
 
 TEST_CASE("Test log Levels debug", "[ttl2]") {
+  LogTestController::getInstance().clear();
   LogTestController::getInstance().setTrace<logging::Logger>();
   std::shared_ptr<logging::Logger> logger = logging::LoggerFactory<logging::Logger>::getLogger();
   logger->log_debug("hello {}", "world");
@@ -53,6 +55,7 @@ TEST_CASE("Test log Levels debug", "[ttl2]") {
 }
 
 TEST_CASE("Test log Levels trace", "[ttl3]") {
+  LogTestController::getInstance().clear();
   LogTestController::getInstance().setTrace<logging::Logger>();
   std::shared_ptr<logging::Logger> logger = logging::LoggerFactory<logging::Logger>::getLogger();
   logger->log_trace("hello {}", "world");
@@ -62,6 +65,7 @@ TEST_CASE("Test log Levels trace", "[ttl3]") {
 }
 
 TEST_CASE("Test log Levels error", "[ttl4]") {
+  LogTestController::getInstance().clear();
   LogTestController::getInstance().setTrace<logging::Logger>();
   std::shared_ptr<logging::Logger> logger = logging::LoggerFactory<logging::Logger>::getLogger();
   logger->log_error("hello {}", "world");
@@ -71,6 +75,7 @@ TEST_CASE("Test log Levels error", "[ttl4]") {
 }
 
 TEST_CASE("Test log Levels change", "[ttl5]") {
+  LogTestController::getInstance().clear();
   LogTestController::getInstance().setTrace<logging::Logger>();
   std::shared_ptr<logging::Logger> logger = logging::LoggerFactory<logging::Logger>::getLogger();
   logger->log_error("hello {}", "world");
@@ -85,6 +90,7 @@ TEST_CASE("Test log Levels change", "[ttl5]") {
 }
 
 TEST_CASE("Logger configured with an ID prints this ID in every log line", "[logger][id]") {
+  LogTestController::getInstance().clear();
   LogTestController::getInstance().setTrace<logging::Logger>();
   const auto uuid = utils::IdGenerator::getIdGenerator()->generate();
   std::shared_ptr<logging::Logger> logger = logging::LoggerFactory<logging::Logger>::getLogger(uuid);
@@ -95,6 +101,7 @@ TEST_CASE("Logger configured with an ID prints this ID in every log line", "[log
 }
 
 TEST_CASE("Printing of the ID can be disabled in the config", "[logger][id][configuration]") {
+  LogTestController::getInstance().clear();
   auto properties = std::make_shared<logging::LoggerProperties>();
 
   bool id_is_present{};
@@ -128,6 +135,7 @@ struct CStringConvertible {
 };
 
 TEST_CASE("Test log custom string formatting", "[ttl6]") {
+  LogTestController::getInstance().clear();
   LogTestController::getInstance().setTrace<logging::Logger>();
   std::shared_ptr<logging::Logger> logger = logging::LoggerFactory<logging::Logger>::getLogger();
   logger->log_trace("{} {} {}", "one", std::string{"two"}, CStringConvertible{"three"}.c_str());
@@ -137,6 +145,7 @@ TEST_CASE("Test log custom string formatting", "[ttl6]") {
 }
 
 TEST_CASE("Test log lazy string generation", "[ttl7]") {
+  LogTestController::getInstance().clear();
   LogTestController::getInstance().setDebug<logging::Logger>();
   std::shared_ptr<logging::Logger> logger = logging::LoggerFactory<logging::Logger>::getLogger();
   int call_count = 0;
@@ -165,6 +174,7 @@ class TestClass2 {
 };
 
 TEST_CASE("Test ShortenNames", "[ttl8]") {
+  LogTestController::getInstance().clear();
   std::shared_ptr<logging::LoggerProperties> props = std::make_shared<logging::LoggerProperties>();
 
   props->set("spdlog.shorten_names", "true");
@@ -194,34 +204,12 @@ TEST_CASE("Test ShortenNames", "[ttl8]") {
 using namespace minifi::io;
 
 std::string decompress(const std::unique_ptr<InputStream>& input) {
+  input->seek(0);
   auto output = std::make_unique<BufferStream>();
   auto decompressor = std::make_shared<ZlibDecompressStream>(gsl::make_not_null(output.get()));
   minifi::internal::pipe(*input, *decompressor);
   decompressor->close();
   return utils::span_to<std::string>(utils::as_span<const char>(output->getBuffer()));
-}
-
-TEST_CASE("Test Compression", "[ttl9]") {
-  auto& log_config = logging::LoggerConfiguration::getConfiguration();
-  auto properties = std::make_shared<logging::LoggerProperties>();
-  std::string className;
-  SECTION("Using root logger") {
-    className = "CompressionTestClassUsingRoot";
-    // by default the root logger is OFF
-    properties->set("logger.root", "INFO");
-  }
-  SECTION("Inherit compression sink") {
-    className = "CompressionTestClassInheriting";
-    properties->set("appender.null", "null");
-    properties->set("logger." + className, "INFO,null");
-  }
-  log_config.initialize(properties);
-  auto logger = log_config.getLogger(className);
-  logger->log_error("Hi there");
-  auto compressed_logs = logging::LoggerConfiguration::getCompressedLogs();
-  REQUIRE(compressed_logs.size() == 1);
-  auto logs = decompress(compressed_logs[0]);
-  REQUIRE(logs.find("Hi there") != std::string::npos);
 }
 
 class LoggerTestAccessor {
@@ -235,35 +223,61 @@ class LoggerTestAccessor {
   static size_t getUncompressedSize(logging::LoggerConfiguration& log_config) {
     return log_config.compression_manager_.getSink()->cached_logs_.size();
   }
-  static size_t getCompressedSize(logging::LoggerConfiguration& log_config) {
-    return log_config.compression_manager_.getSink()->compressed_logs_.size();
+  static bool waitForCompressionToHappen(logging::LoggerConfiguration& log_config) {
+    auto sink = log_config.compression_manager_.getSink();
+    return !sink || utils::verifyEventHappenedInPollTime(1s, [&]{ return sink->cached_logs_.itemCount() == 0; });
   }
-  static void runCompression(logging::LoggerConfiguration& log_config) {
-    while (logging::internal::LogCompressorSink::CompressionResult::Success == log_config.compression_manager_.getSink()->compress()){}
+  static auto getCompressedLogs(logging::LoggerConfiguration& log_config) {
+    return log_config.compression_manager_.getCompressedLogs(std::chrono::milliseconds{0});
   }
 };
 
+TEST_CASE("Test Compression", "[ttl9]") {
+  auto log_config = logging::LoggerConfiguration::newInstance();
+  auto properties = std::make_shared<logging::LoggerProperties>();
+  std::string className;
+  SECTION("Using root logger") {
+    className = "CompressionTestClassUsingRoot";
+    // by default the root logger is OFF
+    properties->set("logger.root", "INFO");
+  }
+  SECTION("Inherit compression sink") {
+    className = "CompressionTestClassInheriting";
+    properties->set("appender.null", "null");
+    properties->set("logger." + className, "INFO,null");
+  }
+  log_config->initialize(properties);
+  auto logger = log_config->getLogger(className);
+  logger->log_error("Hi there");
+
+  REQUIRE(LoggerTestAccessor::waitForCompressionToHappen(*log_config));
+  auto compressed_logs = LoggerTestAccessor::getCompressedLogs(*log_config);
+  REQUIRE(compressed_logs.size() == 1);
+  auto logs = decompress(compressed_logs[0]);
+  REQUIRE(logs.find("Hi there") != std::string::npos);
+}
+
 TEST_CASE("Test Compression cache overflow is discarded intermittently", "[ttl10]") {
-  auto& log_config = logging::LoggerConfiguration::getConfiguration();
+  auto log_config = logging::LoggerConfiguration::newInstance();
   auto properties = std::make_shared<logging::LoggerProperties>();
   properties->set(logging::internal::CompressionManager::compression_cached_log_max_size_, "10 KB");
-  LoggerTestAccessor::setCompressionCacheSegmentSize(log_config, 1_KiB);
+  LoggerTestAccessor::setCompressionCacheSegmentSize(*log_config, 1_KiB);
   std::string className = "CompressionTestCacheCleaned";
   // by default the root logger is OFF
   properties->set("logger.root", "INFO");
-  log_config.initialize(properties);
-  auto logger = log_config.getLogger(className);
+  log_config->initialize(properties);
+  auto logger = log_config->getLogger(className);
   for (size_t idx = 0; idx < 10000; ++idx) {
     logger->log_error("Hi there");
   }
   bool cache_shrunk = utils::verifyEventHappenedInPollTime(std::chrono::seconds{1}, [&] {
-    return LoggerTestAccessor::getUncompressedSize(log_config) <= 10_KiB;
+    return LoggerTestAccessor::getUncompressedSize(*log_config) <= 10_KiB;
   });
   REQUIRE(cache_shrunk);
 }
 
 TEST_CASE("Setting either properties to 0 disables in-memory compressed logs", "[ttl11]") {
-  auto& log_config = logging::LoggerConfiguration::getConfiguration();
+  auto log_config = logging::LoggerConfiguration::newInstance();
   auto properties = std::make_shared<logging::LoggerProperties>();
   bool is_empty = false;
   SECTION("Cached log size is set to 0") {
@@ -280,22 +294,26 @@ TEST_CASE("Setting either properties to 0 disables in-memory compressed logs", "
   }
   // by default the root logger is OFF
   properties->set("logger.root", "INFO");
-  log_config.initialize(properties);
-  auto logger = log_config.getLogger("DisableCompressionTestLogger");
+  log_config->initialize(properties);
+  auto logger = log_config->getLogger("DisableCompressionTestLogger");
   logger->log_error("Hi there");
-  REQUIRE(logging::LoggerConfiguration::getCompressedLogs().empty() == is_empty);
+
+  REQUIRE(LoggerTestAccessor::waitForCompressionToHappen(*log_config));
+  auto compressed_logs = LoggerTestAccessor::getCompressedLogs(*log_config);
+  REQUIRE(compressed_logs.empty() == is_empty);
 }
 
 TEST_CASE("Setting max log entry length property trims long log entries", "[ttl12]") {
-  auto& log_config = logging::LoggerConfiguration::getConfiguration();
+  auto log_config = logging::LoggerConfiguration::newInstance();
   auto properties = std::make_shared<logging::LoggerProperties>();
   properties->set("max.log.entry.length", "2");
   properties->set("logger.root", "INFO");
-  log_config.initialize(properties);
-  auto logger = log_config.getLogger("SetMaxLogEntryLengthTestLogger");
+  log_config->initialize(properties);
+  auto logger = log_config->getLogger("SetMaxLogEntryLengthTestLogger");
   logger->log_error("Hi there");
 
-  auto compressed_logs = logging::LoggerConfiguration::getCompressedLogs();
+  REQUIRE(LoggerTestAccessor::waitForCompressionToHappen(*log_config));
+  auto compressed_logs = LoggerTestAccessor::getCompressedLogs(*log_config);
   REQUIRE(compressed_logs.size() == 1);
   auto logs = decompress(compressed_logs[0]);
   REQUIRE(logs.find("Hi ") == std::string::npos);
@@ -303,15 +321,16 @@ TEST_CASE("Setting max log entry length property trims long log entries", "[ttl1
 }
 
 TEST_CASE("Setting max log entry length property trims long formatted log entries", "[ttl13]") {
-  auto& log_config = logging::LoggerConfiguration::getConfiguration();
+  auto log_config = logging::LoggerConfiguration::newInstance();
   auto properties = std::make_shared<logging::LoggerProperties>();
   properties->set("max.log.entry.length", "2");
   properties->set("logger.root", "INFO");
-  log_config.initialize(properties);
-  auto logger = log_config.getLogger("SetMaxLogEntryLengthTestLogger");
+  log_config->initialize(properties);
+  auto logger = log_config->getLogger("SetMaxLogEntryLengthInFormattedTestLogger");
   logger->log_error("Hi there {}", "John");
 
-  auto compressed_logs = logging::LoggerConfiguration::getCompressedLogs();
+  REQUIRE(LoggerTestAccessor::waitForCompressionToHappen(*log_config));
+  auto compressed_logs = LoggerTestAccessor::getCompressedLogs(*log_config);
   REQUIRE(compressed_logs.size() == 1);
   auto logs = decompress(compressed_logs[0]);
   REQUIRE(logs.find("Hi ") == std::string::npos);
@@ -319,17 +338,18 @@ TEST_CASE("Setting max log entry length property trims long formatted log entrie
 }
 
 TEST_CASE("Setting max log entry length to a size larger than the internal buffer size", "[ttl14]") {
-  auto& log_config = logging::LoggerConfiguration::getConfiguration();
+  auto log_config = logging::LoggerConfiguration::newInstance();
   auto properties = std::make_shared<logging::LoggerProperties>();
   properties->set("max.log.entry.length", "1500");
   properties->set("logger.root", "INFO");
-  log_config.initialize(properties);
-  auto logger = log_config.getLogger("SetMaxLogEntryLengthTestLogger");
+  log_config->initialize(properties);
+  auto logger = log_config->getLogger("SetMaxLogEntryLengthToLargerThanBufferSizeTestLogger");
   std::string log(2000, 'a');
   std::string expected_log(1500, 'a');
   logger->log_error("{}", log);
 
-  auto compressed_logs = logging::LoggerConfiguration::getCompressedLogs();
+  REQUIRE(LoggerTestAccessor::waitForCompressionToHappen(*log_config));
+  auto compressed_logs = LoggerTestAccessor::getCompressedLogs(*log_config);
   REQUIRE(compressed_logs.size() == 1);
   auto logs = decompress(compressed_logs[0]);
   REQUIRE(logs.find(log) == std::string::npos);
@@ -337,21 +357,25 @@ TEST_CASE("Setting max log entry length to a size larger than the internal buffe
 }
 
 TEST_CASE("Setting max log entry length to unlimited results in unlimited log entry size", "[ttl15]") {
-  auto& log_config = logging::LoggerConfiguration::getConfiguration();
+  auto log_config = logging::LoggerConfiguration::newInstance();
   auto properties = std::make_shared<logging::LoggerProperties>();
+  std::string_view logger_name;
   SECTION("Use unlimited value") {
     properties->set("max.log.entry.length", "unlimited");
+    logger_name = "SetMaxLogEntryLengthToUnlimitedTestLogger";
   }
   SECTION("Use -1 value") {
     properties->set("max.log.entry.length", "-1");
+    logger_name = "SetMaxLogEntryLengthTo-1TestLogger";
   }
   properties->set("logger.root", "INFO");
-  log_config.initialize(properties);
-  auto logger = log_config.getLogger("SetMaxLogEntryLengthTestLogger");
+  log_config->initialize(properties);
+  auto logger = log_config->getLogger(logger_name);
   std::string log(5000, 'a');
   logger->log_error("{}", log);
 
-  auto compressed_logs = logging::LoggerConfiguration::getCompressedLogs();
+  REQUIRE(LoggerTestAccessor::waitForCompressionToHappen(*log_config));
+  auto compressed_logs = LoggerTestAccessor::getCompressedLogs(*log_config);
   REQUIRE(compressed_logs.size() == 1);
   auto logs = decompress(compressed_logs[0]);
   REQUIRE(logs.find(log) != std::string::npos);
@@ -378,34 +402,42 @@ TEST_CASE("custom fmt formatter tests") {
   CHECK("127.0.0.1:8080" == fmt::format("{}", asio::ip::tcp::endpoint(asio::ip::make_address("127.0.0.1"), 8080)));
 }
 
-TEST_CASE("Test sending multiple segments at once", "[ttl16]") {
-  auto& log_config = logging::LoggerConfiguration::getConfiguration();
-  LoggerTestAccessor::setCompressionCompressedSegmentSize(log_config, 100);
-  LoggerTestAccessor::setCompressionCacheSegmentSize(log_config, 100);
-  auto properties = std::make_shared<logging::LoggerProperties>();
-  // by default the root logger is OFF
-  properties->set("logger.root", "INFO");
-  log_config.initialize(properties);
-  auto logger = log_config.getLogger("CompressionTestMultiSegment");
-
+std::vector<std::string> generateRandomStrings() {
+  std::vector<std::string> random_strings;
   std::random_device rd;
   std::mt19937 eng(rd());
   constexpr const char * TEXT_CHARS = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890";
   const int index_of_last_char = gsl::narrow<int>(strlen(TEXT_CHARS)) - 1;
   std::uniform_int_distribution<> distr(0, index_of_last_char);
   std::vector<char> data(100);
-  std::string log_str;
   const size_t SEGMENT_COUNT = 5;
   for (size_t idx = 0; idx < SEGMENT_COUNT; ++idx) {
     std::generate_n(data.begin(), data.size(), [&] { return TEXT_CHARS[static_cast<uint8_t>(distr(eng))]; });
-    log_str = std::string{data.begin(), data.end()} + "." + std::to_string(idx);
-    logger->log_error("{}", log_str);
+    random_strings.push_back(std::string{data.begin(), data.end()} + "." + std::to_string(idx));
+  }
+  return random_strings;
+}
+
+TEST_CASE("Test sending multiple segments at once", "[ttl16]") {
+  auto log_config = logging::LoggerConfiguration::newInstance();
+  LoggerTestAccessor::setCompressionCompressedSegmentSize(*log_config, 100);
+  LoggerTestAccessor::setCompressionCacheSegmentSize(*log_config, 100);
+  auto properties = std::make_shared<logging::LoggerProperties>();
+  // by default the root logger is OFF
+  properties->set("logger.root", "INFO");
+  log_config->initialize(properties);
+  auto logger = log_config->getLogger("CompressionTestMultiSegment");
+
+  const auto random_strings = generateRandomStrings();
+  for (const auto& random_string : random_strings) {
+    logger->log_error("{}", random_string);
   }
 
-  LoggerTestAccessor::runCompression(log_config);
-
-  auto compressed_logs = logging::LoggerConfiguration::getCompressedLogs();
-  REQUIRE(compressed_logs.size() == SEGMENT_COUNT);
-  auto logs = decompress(compressed_logs[SEGMENT_COUNT - 1]);
-  REQUIRE(logs.find(log_str) != std::string::npos);
+  REQUIRE(LoggerTestAccessor::waitForCompressionToHappen(*log_config));
+  auto compressed_logs = LoggerTestAccessor::getCompressedLogs(*log_config);
+  REQUIRE(compressed_logs.size() == random_strings.size());
+  for (size_t i = 0; i < compressed_logs.size(); ++i) {
+    auto logs = decompress(compressed_logs[i]);
+    REQUIRE(logs.find(random_strings[i]) != std::string::npos);
+  }
 }
